cabal-version:       2.4
name:                random-token
version:             0.1.0.0
synopsis:            Implementation of random token generation and parsing
author:              typeable.io
maintainer:          s9gf4ult@gmail.com
license-file:        LICENSE
category:            Web
build-type:          Simple

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Random.Token
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , aeson
                     , base64-bytestring
                     , bytestring
                     , cryptonite
                     , deepseq
                     , http-api-data
                     , text
  if !impl(ghcjs)
    build-depends:     postgresql-simple
  default-language:    Haskell2010
  default-extensions: CPP
                    , ConstraintKinds
                    , DataKinds
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveTraversable
                    , DuplicateRecordFields
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NumDecimals
                    , OverloadedStrings
                    , PolyKinds
                    , QuasiQuotes
                    , RankNTypes
                    , RecordWildCards
                    , RoleAnnotations
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeOperators
                    , UndecidableInstances
                    , ViewPatterns

test-suite spec
  type:             exitcode-stdio-1.0
  hs-source-dirs:   spec
  main-is:          Test.hs
  other-modules:    TokenSpec
  default-language: Haskell2010
  build-depends:    base >= 4.10 && < 5
                  , hspec
                  , random-token
  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       "-with-rtsopts=-N -A64m -qb0 -n4m -T -I1"
  ghc-prof-options: -fprof-auto
  default-extensions: ConstraintKinds
                    , DataKinds
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveTraversable
                    , DuplicateRecordFields
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NumDecimals
                    , OverloadedStrings
                    , PolyKinds
                    , QuasiQuotes
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeOperators
                    , UndecidableInstances
                    , ViewPatterns